fixed and align header content

--- a/style.css
+++ b/style.css
@@ -22,19 +22,30 @@ body {
 }
 
 .address {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 900;
     color: #160437;
     text-align: center;
+    margin: 1px;
+}
+.phone{
+    font-size: 14px;
+}
+.phone-icon{
+    font-size: 11px;
+    margin-right: 5px;
+    margin-top: 4px;
 }
 
 i {
     color:#7f0c0c;
+    font-size: 13px;
   
 }
-.icon-bar{
-    display: flex;
-    justify-content: space-around;
+.location{
+    font-size: 13px;
+    margin-right: 5px;
+    margin-top: 5px;
 }
 
 .header {
